--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Nested Comments</title>
-  <link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8">
+    <title>Nested Comments</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
-  <div id="app" class="container">
-    <h1 class="text-center mb-4">Nested Comments</h1>
-    <div class="comments-container">
+    <div id="app" class="container">
+        <h1 class="text-center mb-4">Nested Comments</h1>
+        <h2 class="text-center mb-4">بسم الله الرحمن الرحیم</h2>
+        <div class="comments-container">
 
+        </div>
     </div>
-  </div>
 
-  <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
