--- a/test.html
+++ b/test.html
@@ -10,9 +10,9 @@
 <body>
 
     <div id="app" class="container">
-        <h1 class="text-center mb-4">Nested Comments</h1>
+      
         <h2 class="text-center mb-4">بسم الله الرحمن الرحیم</h2>
-        <h3 class="text-center mb-4">saaaaaaaaaaaaaaaalam</h3>
+        <h3 class="text-center mb-4">صفحه تست</h3>
         <div class="comments-container">
 
         </div>
