--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nested Comments</title>
+    <title>الله</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
